# webrtc-streamer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  joinjanusvideoroom.js  joinxmpproom.js  webrtc.cmake
html/: Bunny.html  admin.html  apprtc.html  help.html  htmlmapmarker.js  index.html  janustest.html  janusvideoroom-element.js  janusvideoroom.html  janusvideoroom.js  janusvideoroom.json  jitsiroom.html  jitsitest.html  map.html  sendstream.html  tensorflow.js  webrtc-streamer-algo-element.js  webrtc-streamer-element.html  webrtc-streamer-element.js  webrtc-streamer-footer-element.js  webrtc-streamer-menu-element.js  webrtc-streamer-options-element.js  webrtc-streamer-selector-element.js  webrtcstreamer.html  webrtcstreamer.js  xmppvideoroom.html  xmppvideoroom.js
inc/: HttpServerRequestHandler.h  VcmCapturer.h  VideoFilter.h  desktopcapturer.h  fileaudiocapturer.h  filevideocapturer.h  liveaudiosource.h  livevideosource.h  rtpvideocapturer.h  rtspaudiocapturer.h  screencapturer.h  windowcapturer.h
src/: CMakeLists.txt  CapturerFactory.h  DesktopCapturer.cpp  DesktopCapturer.h  FileAudioCapturer.cpp  FileAudioCapturer.h  FileVideoCapturer.cpp  FileVideoCapturer.h  HttpServerRequestHandler.cpp  LiveAudioSource.h  LiveVideoSource.h  PeerConnectionManager.cpp  PeerConnectionManager.h  RTPVideoCapturer.cpp  RTPVideoCapturer.h  RTSPAudioCapturer.cpp  RTSPAudioCapturer.h  RTSPVideoCapturer.cpp  RTSPVideoCapturer.h  V4l2AlsaMap.h  VcmCapturer.h  VideoDecoder.h  VideoFilter.h  VideoScaler.h  WebRTCStreamer.cpp  desktopcapturer.cpp  fileaudiocapturer.cpp  filevideocapturer.cpp  main.cpp  rtpvideocapturer.cpp  rtspaudiocapturer.cpp  rtspvideocapturer.cpp  rtspvideocapturer.h
src/civetweb/: CivetServer.cpp  CivetServer.h  civetweb.c
src/live/BasicUsageEnvironment/: BasicHashTable.cpp  BasicTaskScheduler.cpp  BasicUsageEnvironment.cpp  BasicUsageEnvironment0.cpp  DelayQueue.cpp
src/live/groupsock/: Groupsock.cpp  GroupsockHelper.cpp  IOHandlers.cpp  NetAddress.cpp  NetInterface.cpp
src/live/groupsock/include/: NetCommon.h
src/live/liveMedia/: AC3AudioFileServerMediaSubsession.cpp  AC3AudioStreamFramer.cpp  ADTSAudioFileServerMediaSubsession.cpp  ADTSAudioFileSource.cpp  AMRAudioFileServerMediaSubsession.cpp  AMRAudioFileSink.cpp  AMRAudioFileSource.cpp  AMRAudioRTPSink.cpp  AMRAudioRTPSource.cpp  AVIFileSink.cpp  Base64.cpp  BasicUDPSink.cpp  BasicUDPSource.cpp  ByteStreamFileSource.cpp  ByteStreamMemoryBufferSource.cpp  DVVideoFileServerMediaSubsession.cpp  DVVideoStreamFramer.cpp  DeviceSource.cpp  DigestAuthentication.cpp  EBMLNumber.cpp  FileSink.cpp  FramedSource.cpp  GenericMediaServer.cpp  H263plusVideoFileServerMediaSubsession.cpp  H263plusVideoStreamFramer.cpp  H263plusVideoStreamParser.cpp  H264VideoFileServerMediaSubsession.cpp  H264VideoFileSink.cpp  H264VideoRTPSink.cpp  H264VideoRTPSource.cpp  H264or5VideoFileSink.cpp  H264or5VideoRTPSink.cpp  H264or5VideoStreamFramer.cpp  H265VideoFileServerMediaSubsession.cpp  H265VideoFileSink.cpp  H265VideoRTPSink.cpp  HLSSegmenter.cpp  InputFile.cpp  JPEGVideoRTPSink.cpp  Locale.cpp  (+76 more)
src/live555helper/: SessionSink.h  environment.cpp  mkvclient.cpp  mkvclient.h  rtspconnectionclient.cpp  rtspconnectionclient.h  sdpclient.cpp  sdpclient.h
